small border radius

--- a/src/components/MDXEntryRow/components/Tag/tag.module.css
+++ b/src/components/MDXEntryRow/components/Tag/tag.module.css
@@ -1,8 +1,8 @@
 .tag {
   color: var(--theme-blue-2);
-  background: var(--theme-pill);
-  border-radius: 1.5rem;
-  padding: 0.2rem 0.5rem;
+  /* border-radius: 1.5rem; */
+  padding: 0 0 0 0.5rem;
   font-size: 0.8rem;
   color: var(--theme-text-high-contrast);
+  border-left: 1px dashed var(--theme-pill);
 }
