--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -33,7 +33,6 @@
     var(--theme-blue-2) 0%,
     var(--theme-transparent) 85%
   );
-  --theme-pill: rgba(200, 200, 200, 0.5);
 
   /* Github squares */
   --color-gh-1: #0e4429;
@@ -43,6 +42,9 @@
 
   --theme-grid-line-color: rgb(238, 238, 238);
   --grid-line: 1px dashed var(--theme-grid-line-color);
+  --theme-pill: var(--theme-grid-line-color);
+
+  --tiny-border-radius: 3px;
 }
 
 body.dark {
@@ -78,6 +80,7 @@ body.dark {
   );
   --theme-grid-line-color: rgb(34, 40, 52);
   --grid-line: 1px dashed var(--theme-grid-line-color);
+  --theme-pill: var(--theme-grid-line-color);
 }
 
 * {
