--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -24,6 +24,8 @@
   transform: translateY(100vh);
   transition: transform var(--animation);
   transition-delay: 10ms;
+  border-radius: calc(var(--tiny-border-radius) * 2);
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 700px) {
