increase link padding

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -29,6 +29,7 @@
   color: var(--theme-inverted-text);
   text-decoration: none;
   padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .column strong {
