--- a/src/components/MDXEntryRow/components/Tags/tags.module.css
+++ b/src/components/MDXEntryRow/components/Tags/tags.module.css
@@ -2,12 +2,13 @@
   padding-top: 2rem;
   display: flex;
   column-gap: 0.8rem;
-  row-gap: 0.5rem;
+  row-gap: 0.7rem;
   flex-wrap: wrap;
   justify-content: flex-end;
   border-bottom: var(--grid-line);
   padding-bottom: 1rem;
   position: relative;
+  padding-left: 2rem;
 }
 
 .icon {
