--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -34,3 +34,12 @@
 .coverWrapper img {
   object-fit: cover;
 }
+
+.metadata {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 1rem;
+  padding-top: 0.2rem;
+  padding-bottom: 1rem;
+}
