--- a/src/components/PostModal/postModal.module.css
+++ b/src/components/PostModal/postModal.module.css
@@ -23,3 +23,12 @@
 .title {
   padding-top: 1rem;
 }
+
+.metadata {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 1rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.5rem;
+}
