--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -9,6 +9,9 @@
   display: flex;
   align-items: center;
   box-shadow: var(--theme-box-shadow-small);
+  left: 0;
+  right: 0;
+  z-index: 99;
 }
 
 @media only screen and (max-width: 500px) {
