--- a/src/components/BookModal/bookModal.module.css
+++ b/src/components/BookModal/bookModal.module.css
@@ -35,9 +35,11 @@
   border-radius: 4px;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 700px) {
   .wrapper {
     flex-direction: column-reverse;
+    padding: 0;
+
     padding-top: 4rem;
     width: 100%;
   }
