--- a/src/components/MDXEntryRow/mdxEntryRow.module.css
+++ b/src/components/MDXEntryRow/mdxEntryRow.module.css
@@ -2,9 +2,18 @@
   display: flex;
   flex: 1 1 auto;
   position: relative;
+
+  z-index: 99;
+}
+
+.col-3 {
   min-width: calc(33% - 8px);
   max-width: calc(33% - 8px);
-  z-index: 99;
+}
+
+.col-4 {
+  min-width: calc(25% - 12px);
+  max-width: calc(25% - 12px);
 }
 
 .wrapper.filler {
@@ -33,6 +42,13 @@
   );
 }
 
+@media only screen and (max-width: 1100px) {
+  .col-4 {
+    min-width: calc(33% - 8px);
+    max-width: calc(33% - 8px);
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .wrapper {
     min-width: calc(50% - 8px);
@@ -56,7 +72,7 @@
 }
 
 .imageParent.book {
-  height: 500px;
+  height: 400px;
 }
 
 .imageParent img {
