--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -1,3 +1,25 @@
+@keyframes shimmer {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
+.fallback {
+  animation-name: shimmer;
+  animation-duration: 2.2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+  background: #ddd;
+  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+  background-size: 1200px 100%;
+  border-radius: 1rem;
+}
+
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
@@ -17,6 +39,9 @@
   cursor: pointer;
   min-width: 8rem;
   filter: grayscale(100%);
+  border-radius: 1rem;
+
+  box-shadow: var(--theme-box-shadow-small);
 }
 
 .text {
