--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -59,13 +59,14 @@
   height: 100%;
   flex-shrink: 1;
   min-width: 2px;
-  transition: all var(--animation);
+  transition: flex var(--animation), filter var(--animation);
   cursor: pointer;
   min-width: 8rem;
   filter: grayscale(100%) contrast(1.4);
   border-radius: 1rem;
 
   box-shadow: var(--theme-box-shadow-small);
+  overflow: hidden;
 }
 
 .text {
@@ -86,6 +87,7 @@
   padding: 1.4rem;
   max-height: 100%;
   overflow: hidden;
+  min-width: 592px;
 }
 
 .text h1 {
@@ -137,6 +139,7 @@
     flex-shrink: 0;
     flex-grow: 1;
     opacity: 1;
+    min-width: unset;
   }
 
   .text h1 {
