--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -92,7 +92,7 @@
 
 .text h1 {
   font-size: 2rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.1rem;
 }
 
 .text p {
@@ -117,6 +117,16 @@
   /* Tiny border radius still makes a differnece */
   border-radius: 1rem;
   object-position: center;
+}
+
+.metadata.metadata {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  opacity: 0.8;
+}
+
+.metadataIcon {
+  margin-right: 0.5rem;
 }
 
 @media only screen and (max-width: 1000px) {
