--- a/src/components/PostModal/postModal.module.css
+++ b/src/components/PostModal/postModal.module.css
@@ -26,9 +26,19 @@
 
 .metadata {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   column-gap: 1rem;
   padding-top: 0.2rem;
   padding-bottom: 0.5rem;
+}
+
+.cheersWrapper {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.readingTime.readingTime {
+  padding-top: 0.5rem;
 }
