--- a/src/components/Post/Image/image.module.css
+++ b/src/components/Post/Image/image.module.css
@@ -2,9 +2,9 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 30rem;
   z-index: 0;
   margin: 1rem 0;
+  aspect-ratio: var(--aspect-ratio);
 }
 
 .imageParent.tableMode {
@@ -12,24 +12,8 @@
   width: 15rem;
 }
 
-.short {
-  height: 20rem;
-}
-
-.tiny {
-  height: 6 rem;
-}
-
-.giant {
-  height: 50rem;
-}
-
 .imageParent img {
   object-fit: contain;
-}
-
-.vertical {
-  height: 50rem;
 }
 
 @media only screen and (max-width: 700px) {
