--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -1,7 +1,7 @@
 .article {
   max-width: 900px;
   margin: 0 auto;
-  padding: 14rem 2rem 2rem 2rem;
+  padding: 14rem 2rem 6rem 2rem;
   color: var(--theme-text);
   position: relative;
 }
@@ -16,10 +16,6 @@
 
 .back:hover {
   opacity: 1;
-}
-
-.title {
-  padding-top: 1rem;
 }
 
 .coverWrapper {
@@ -42,6 +38,7 @@
   column-gap: 1rem;
   padding-top: 0.2rem;
   padding-bottom: 1rem;
+  min-width: 12rem;
 }
 
 .cheersWrapper {
@@ -52,4 +49,66 @@
 
 .readingTime.readingTime {
   padding-top: 0.5rem;
+}
+
+.topSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 1rem;
+  justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+}
+
+.title.title {
+  padding-top: 0;
+}
+
+.viewCount {
+  font-size: 0.8rem;
+  padding-top: 0.5rem;
+  padding-left: 2rem;
+  margin-right: auto;
+
+  color: var(--theme-text-secondary);
+
+  display: flex;
+  flex-direction: row-reverse;
+  text-align: center;
+  align-items: center;
+  column-gap: 0.7rem;
+  width: 100%;
+}
+
+.viewCount svg {
+  opacity: 0.5;
+}
+
+.subItems {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 800px) {
+  .topSection {
+    display: block;
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+
+  .subItems {
+    flex-direction: row-reverse;
+    column-gap: 1rem;
+  }
+
+  .viewCount {
+    padding-left: 0;
+    width: unset;
+  }
+
+  .readingTime.readingTime {
+    padding-left: 0;
+  }
 }
