--- a/src/components/MDXEntryRow/components/ReadingTime/readingtime.module.css
+++ b/src/components/MDXEntryRow/components/ReadingTime/readingtime.module.css
@@ -7,6 +7,7 @@
   color: var(--theme-text-secondary);
 
   display: flex;
+  flex-direction: row-reverse;
   text-align: center;
   align-items: center;
   column-gap: 0.7rem;
