--- a/src/components/PostModal/postModal.module.css
+++ b/src/components/PostModal/postModal.module.css
@@ -20,10 +20,6 @@
   position: relative;
 }
 
-.title {
-  padding-top: 1rem;
-}
-
 .metadata {
   display: flex;
   flex-direction: column;
@@ -31,6 +27,7 @@
   column-gap: 1rem;
   padding-top: 0.2rem;
   padding-bottom: 0.5rem;
+  min-width: 12rem;
 }
 
 .cheersWrapper {
@@ -41,4 +38,66 @@
 
 .readingTime.readingTime {
   padding-top: 0.5rem;
+}
+
+.topSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 1rem;
+  justify-content: space-between;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.title.title {
+  padding-top: 0;
+}
+
+.viewCount {
+  font-size: 0.8rem;
+  padding-top: 0.5rem;
+  padding-left: 2rem;
+  margin-right: auto;
+
+  color: var(--theme-text-secondary);
+
+  display: flex;
+  flex-direction: row-reverse;
+  text-align: center;
+  align-items: center;
+  column-gap: 0.7rem;
+  width: 100%;
+}
+
+.viewCount svg {
+  opacity: 0.5;
+}
+
+.subItems {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 800px) {
+  .topSection {
+    display: block;
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+
+  .subItems {
+    flex-direction: row-reverse;
+    column-gap: 1rem;
+  }
+
+  .viewCount {
+    padding-left: 0;
+    width: unset;
+  }
+
+  .readingTime.readingTime {
+    padding-left: 0;
+  }
 }
