--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -93,10 +93,11 @@
 .text h1 {
   font-size: 2rem;
   padding-bottom: 0.1rem;
+  font-weight: 500;
 }
 
 .text p {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 200;
   line-height: 1.6rem;
 }
@@ -120,9 +121,9 @@
 }
 
 .metadata.metadata {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-bottom: 1rem;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .metadataIcon {
@@ -157,7 +158,8 @@
   }
 
   .text p {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
   }
 
   .fallback {
@@ -166,5 +168,9 @@
 
   .controls {
     display: none;
+  }
+
+  .metadata.metadata {
+    margin-bottom: 0.5rem;
   }
 }
