--- a/src/components/Post/Paragraph/p.module.css
+++ b/src/components/Post/Paragraph/p.module.css
@@ -6,16 +6,13 @@
 }
 
 .p code {
-  background-color: var(--code-background);
-  color: var(--code-color);
+  background: var(--theme-blue-0);
+  border-left: 2px solid var(--theme-blue-2);
+
+  color: var(--theme-blue-2);
   padding: 0.1rem 0.3rem;
   box-shadow: var(--theme-box-shadow-tiny);
   border-radius: 5px;
-  opacity: 0.7;
   font-size: 1rem;
   word-break: break-word;
-}
-
-:global(body.dark) .p code {
-  opacity: 0.8;
 }
