--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   flex-direction: column;
   z-index: 999999;
-  padding: 2rem;
+  padding: 2rem 2rem 1rem 2rem;
   pointer-events: none;
 }
 
