--- a/src/app/hi/hi.module.css
+++ b/src/app/hi/hi.module.css
@@ -1,14 +1,28 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .wrapper {
   margin: 0 auto;
   max-width: 700px;
-  padding: 4rem 2rem;
+  padding: 0 2rem 4rem 2rem;
   text-align: center;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 
 .content {
   margin: 0 auto;
   max-width: 700px;
-  padding: 1rem 2rem 4rem 2rem;
+  padding: 0 2rem 4rem 2rem;
   text-align: center;
 }
 
