update render page

--- a/src/app/hi/render/render.module.css
+++ b/src/app/hi/render/render.module.css
@@ -1,5 +1,5 @@
 .renderLogoContainer {
-  background: rgb(255, 136, 223);
+  background: #ff88df;
   margin: 0 auto;
   padding: 1rem;
   border-radius: 100%;
