--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,8 @@ body {
 strong {
   font-weight: 600;
 }
+
+/* Hide the spinner for the calendly embed */
+.calendly-spinner {
+  display: none;
+}
