add some more slides

--- a/src/app/slides/render23/[slide]/slide.module.css
+++ b/src/app/slides/render23/[slide]/slide.module.css
@@ -1,8 +1,12 @@
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100dvh;
   color: var(--theme-text);
+  padding: 2rem;
+  text-align: center;
+  justify-content: flex-start;
+  padding-bottom: 2rem;
+  overflow-y: auto;
 }
