fix layout shift with scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@ body {
   background-color: var(--theme-background);
   min-height: 100vh;
   min-height: 100dvh;
+  scrollbar-gutter: stable;
 }
 
 body.lockScroll {
