--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -25,3 +25,20 @@
 .collapse {
   height: unset;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fade {
+  animation-duration: 1s;
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
