--- a/src/components/Post/Li/li.module.css
+++ b/src/components/Post/Li/li.module.css
@@ -2,6 +2,7 @@
   padding-top: 0.7rem;
   font-size: 1.2rem;
   line-height: 1.8rem;
+  font-weight: 300;
 }
 
 .li::marker {
@@ -9,12 +10,13 @@
 }
 
 .li code {
-  background-color: var(--code-background);
-  color: var(--code-color);
+  background: var(--theme-blue-0);
+  border-left: 2px solid var(--theme-blue-2);
+
+  color: var(--theme-blue-2);
   padding: 0.1rem 0.3rem;
   box-shadow: var(--theme-box-shadow-tiny);
   border-radius: 5px;
-  opacity: 0.7;
   font-size: 1rem;
   word-break: break-word;
 }
