--- a/src/components/Timeline/timeline.module.css
+++ b/src/components/Timeline/timeline.module.css
@@ -90,6 +90,15 @@
   opacity: 0.9;
 }
 
+.random {
+  display: block;
+}
+
+.random > span {
+  margin-bottom: 2rem;
+  opacity: 0.7;
+}
+
 @media only screen and (max-width: 700px) {
   .post.single {
     max-width: unset;
