--- a/src/components/AnimatedGraph/animatedGraph.module.css
+++ b/src/components/AnimatedGraph/animatedGraph.module.css
@@ -16,6 +16,8 @@
   justify-content: space-evenly;
   max-width: 1000px;
   margin: 0 auto;
+  z-index: 0;
+  position: relative;
 }
 
 @keyframes fadeSquares {
