--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,12 @@ html,
 body {
   max-width: 100vw;
   background-color: var(--theme-background);
+  scrollbar-gutter: stable;
+}
+
+body {
   min-height: 100vh;
   min-height: 100dvh;
-  scrollbar-gutter: stable;
 }
 
 body.lockScroll {
