--- a/src/components/Cheers/cheers.module.css
+++ b/src/components/Cheers/cheers.module.css
@@ -20,6 +20,11 @@
   color: var(--theme-text-secondary);
   opacity: 0.7;
   font-size: 0.8rem;
+  font-weight: 200;
+}
+
+.text strong {
+  font-weight: 300;
 }
 
 .glass {
