--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -50,3 +50,10 @@
   padding-bottom: 1rem;
   opacity: 0.7;
 }
+
+.totalViews {
+  opacity: 0.6;
+  font-size: 0.9em;
+  text-align: right;
+  padding-top: 1rem;
+}
