new banner style

--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -19,13 +19,14 @@
   --code-background: rgba(40, 42, 54, 1);
   --code-color: var(--theme-inverted-text);
   --shadow-color: rgb(164, 164, 164);
+  --theme-inverted-background: rgba(10, 9, 53, var(--background-opacity, 1));
 
   /* Theme animation */
   --animation: 0.5s ease-in-out;
   --animation-curve: cubic-bezier(0.2, 0.85, 0.45, 1.3);
 
   /* Use-cases */
-  --theme-background: rgba(255, 255, 255, 1);
+  --theme-background: rgba(255, 255, 255, var(--background-opacity, 1));
   --theme-box-shadow-standard: 0px 0px 20px 1px var(--shadow-color);
   --theme-box-shadow-small: 0px 0px 100px 0px rgba(226, 226, 226, 0.5);
   --theme-background-gradient: linear-gradient(
@@ -62,6 +63,12 @@ body.dark {
   --theme-yellow: rgba(246, 174, 45, 1);
   --theme-dark: rgba(39, 39, 39, 1);
   --theme-inverted-text: rgba(25, 55, 109, 1);
+  --theme-inverted-background: rgba(
+    255,
+    255,
+    255,
+    var(--background-opacity, 1)
+  );
   --theme-transparent: rgba(0, 0, 0, 0);
   --code-background: rgba(40, 42, 54, 1);
   --code-color: var(--theme-text);
@@ -72,7 +79,7 @@ body.dark {
   --animation-curve: cubic-bezier(0.2, 0.85, 0.45, 1.3);
 
   /* Use-cases */
-  --theme-background: rgba(10, 9, 53, 1);
+  --theme-background: rgba(10, 9, 53, var(--background-opacity, 1));
   --theme-box-shadow-standard: 0px 0px 20px 1px var(--shadow-color);
   --theme-box-shadow-small: 0px 0px 100px 0px rgba(46, 46, 71, 0.5);
   --theme-background-gradient: linear-gradient(
