--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -11,6 +11,18 @@
   z-index: 1;
 }
 
+.noPointer {
+  pointer-events: none;
+}
+
+.noPointer * {
+  pointer-events: all;
+}
+
+.noPointer img {
+  pointer-events: none;
+}
+
 .small {
   padding-top: 2rem;
   top: -2rem;
