pointer event final fixes

--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -15,12 +15,9 @@
   pointer-events: none;
 }
 
-.noPointer * {
+.noPointer a,
+.noPointer button {
   pointer-events: all;
-}
-
-.noPointer img {
-  pointer-events: none;
 }
 
 .small {
