tweaks to homepage

--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -26,6 +26,8 @@
   animation-fill-mode: forwards;
   animation-delay: 0.7s;
   opacity: 0;
+  z-index: 2;
+  position: relative;
 }
 
 .back:hover {
