--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -35,10 +35,11 @@
   column-gap: 1rem;
   color: var(--theme-text);
   font-size: 1.2rem;
+  margin-right: 2rem;
 }
 
 .control {
-  opacity: 0.5;
+  opacity: 1;
   transition: opacity var(--animation);
   cursor: pointer;
 }
@@ -52,6 +53,7 @@
   position: relative;
   display: flex;
   column-gap: 0.5rem;
+  padding: 0 2rem;
 }
 
 .imageParent {
@@ -72,24 +74,37 @@
 }
 
 .text {
-  opacity: 0;
   position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
-  transition: opacity var(--animation);
+  top: 0;
   z-index: 999999;
-  transition-delay: 0s;
   font-weight: 900;
   color: var(--theme-off-white);
-  backdrop-filter: blur(50px);
-  background-color: rgba(0, 0, 0, 0.3);
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+  backdrop-filter: blur(2px);
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 1.4rem;
-  max-height: 100%;
   overflow: hidden;
-  min-width: 592px;
+  min-width: 532px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  transition: background-color var(--animation);
+  transition-delay: 0s;
+}
+
+.inner {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  transition: opacity var(--animation);
+  transition-delay: 0s;
+}
+
+.inner .description {
+  margin-top: auto;
 }
 
 .text h1 {
@@ -110,9 +125,13 @@
   filter: grayscale(0%) contrast(1);
 }
 
-.active .text {
+.active .inner {
   opacity: 1;
-  transition-delay: 0.1s;
+  transition-delay: 0s;
+}
+
+.active .text {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .imageParent img {
@@ -154,14 +173,18 @@
     flex-grow: 1;
     opacity: 1;
     min-width: unset;
-    margin-right: 25%;
     border-radius: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .inner {
+    opacity: 1;
     height: 100%;
   }
 
   .imageParent:nth-child(odd) .text {
     margin-right: 0;
-    margin-left: 25%;
   }
 
   .text h1 {
