--- a/src/components/PostHeader/postHeader.module.css
+++ b/src/components/PostHeader/postHeader.module.css
@@ -6,6 +6,12 @@
   justify-content: space-between;
   padding-top: 1rem;
   padding-bottom: 2rem;
+  position: relative;
+}
+
+.topSection > * {
+  z-index: 1;
+  position: relative;
 }
 
 .title {
