--- a/src/components/Social/social.module.css
+++ b/src/components/Social/social.module.css
@@ -11,6 +11,10 @@
   display: flex;
   column-gap: 1rem;
   font-size: 1.1rem;
+  padding: 10px 1rem;
+  background-color: transparent;
+  border-radius: 10rem;
+  backdrop-filter: blur(10px);
 }
 
 .icon {
