--- a/src/components/ClientBackButton/clientBackButton.module.css
+++ b/src/components/ClientBackButton/clientBackButton.module.css
@@ -1,7 +1,7 @@
 .back {
   font-size: 0.9rem;
   text-decoration: none;
-  color: var(--theme-blue-3);
+  color: white;
   opacity: 0.7;
   transition: opacity var(--animation);
   cursor: pointer;
