--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -16,6 +16,13 @@
   position: relative;
 }
 
+.article video {
+  border-radius: var(--rounded-block);
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  filter: drop-shadow(0 0 0.5rem var(--shadow-color));
+}
+
 .back {
   font-size: 0.9rem;
   text-decoration: none;
