--- a/src/components/Post/Blockquote/blockquote.module.css
+++ b/src/components/Post/Blockquote/blockquote.module.css
@@ -4,6 +4,8 @@
   line-height: 1.8rem;
   margin: 2rem 0 1rem 0;
   padding: 0 1rem;
+  border-radius: var(--rounded-block);
+  filter: drop-shadow(0 0 0.2rem var(--shadow-color));
 }
 
 .bq :global(.svg-inline--fa) {
