--- a/src/components/Post/Code/code.module.css
+++ b/src/components/Post/Code/code.module.css
@@ -1,4 +1,9 @@
 .parent[class*='language-'] {
   font-family: var(--ffamily);
   font-style: var(--fstyle);
+  display: block;
+  padding: 1rem;
+  overflow-x: auto;
+  border-radius: var(--rounded-block);
+  filter: drop-shadow(0 0 0.2rem var(--shadow-color));
 }
