--- a/src/components/Post/Code/code.module.css
+++ b/src/components/Post/Code/code.module.css
@@ -6,4 +6,5 @@
   overflow-x: auto;
   border-radius: var(--rounded-block);
   filter: drop-shadow(0 0 0.2rem var(--shadow-color));
+  border-left: 3px solid var(--theme-blue-2);
 }
