switch back to old parser for jsx support

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,9 @@ strong {
 .calendly-spinner {
   display: none;
 }
+
+.remark-highlight.remark-highlight > pre {
+  background: none;
+  margin: 1rem 0;
+  padding: 0;
+}
